; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_util.c_write_buffer_to_file.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_util.c_write_buffer_to_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i32 0, align 4
@GENERIC_WRITE = common dso_local global i32 0, align 4
@CREATE_ALWAYS = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_NORMAL = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_buffer_to_file(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %11 = load i32, i32* @S_OK, align 4
  store i32 %11, i32* %6, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @GENERIC_WRITE, align 4
  %14 = load i32, i32* @CREATE_ALWAYS, align 4
  %15 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %16 = call i64 @CreateFileW(i32* %12, i32 %13, i32 0, i32* null, i32 %14, i32 %15, i32* null)
  store i64 %16, i64* %10, align 8
  %17 = load i64, i64* %10, align 8
  %18 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %2
  %21 = call i32 (...) @GetLastError()
  %22 = call i32 @HRESULT_FROM_WIN32(i32 %21)
  store i32 %22, i32* %3, align 4
  br label %40

23:                                               ; preds = %2
  %24 = load i32*, i32** %5, align 8
  %25 = call i8* @ID3DXBuffer_GetBufferPointer(i32* %24)
  store i8* %25, i8** %7, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @ID3DXBuffer_GetBufferSize(i32* %26)
  store i32 %27, i32* %8, align 4
  %28 = load i64, i64* %10, align 8
  %29 = load i8*, i8** %7, align 8
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @WriteFile(i64 %28, i8* %29, i32 %30, i32* %9, i32* null)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %36, label %33

33:                                               ; preds = %23
  %34 = call i32 (...) @GetLastError()
  %35 = call i32 @HRESULT_FROM_WIN32(i32 %34)
  store i32 %35, i32* %6, align 4
  br label %36

36:                                               ; preds = %33, %23
  %37 = load i64, i64* %10, align 8
  %38 = call i32 @CloseHandle(i64 %37)
  %39 = load i32, i32* %6, align 4
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %36, %20
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i64 @CreateFileW(i32*, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @HRESULT_FROM_WIN32(i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i8* @ID3DXBuffer_GetBufferPointer(i32*) #1

declare dso_local i32 @ID3DXBuffer_GetBufferSize(i32*) #1

declare dso_local i32 @WriteFile(i64, i8*, i32, i32*, i32*) #1

declare dso_local i32 @CloseHandle(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
